# FastAPI_microshop

./: README.md  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_31_1635-43825c5b4bb5_create_products_table.py  2023_12_31_1645-ccbf3d208f6d_create_user_table.py  2023_12_31_1823-8396acbad56c_create_posts_table.py  2024_01_02_1538-419fb30047e1_create_profile_table.py  2024_01_05_1540-e24f7bf44ad8_create_orders_table.py  2024_01_05_1602-647c2b05abdf_create_order_product_association_table.py  2024_01_06_1855-8313935be746_create_order_product_association_table21.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: settings.py
core/models/: __init__.py  database.py  db_helper.py  env.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
